--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-/*@plugin "@tailwindcss/typography"*/
+@plugin "@tailwindcss/typography";
 
 :root {
   --background: #fff;
@@ -16,5 +16,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif;*/
 }
