--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @plugin "@tailwindcss/typography";
 
 :root {
-  --background: #fff;
+  --background: #faf8f6;
   --foreground: #171717;
 }
 
@@ -16,5 +16,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  /*font-family: Arial, Helvetica, sans-serif;*/
+  /*font-family: var('./assets/fonts/LXGWWenKai-Regular.ttf'), serif !important;*/
 }
