--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,13 @@
 
 body {
   font-size: 18px;
+  color: var(--text-color);
 }
 
 /*---break---*/
 
 :root {
+  --text-color: var(--color-gray-600);
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -50,6 +52,7 @@ body {
 /*---break---*/
 
 .dark {
+  --text-color: #c7cbd2;
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
